--- a/index.jade
+++ b/index.jade
@@ -18,9 +18,11 @@ html
 			p Avacad<b>os</b>, stylized as <b>AvocadOS</b>, is a minimal operating system designed to run almost pure jQuery.
 			h1 The name?
 			p Formerly jQueryOS, the name was changed to AvocadOS. It is based on a <a href="https://en.wikipedia.org/wiki/Meme">meme</a> from <a href="http://codegolf.stackexchange.com">Programming Puzzles & Code Golf</a>:
-				blockquote
-					p hello i have quetions how does juice an avocado i have try for thirtee minut and no juic
-					small user46049, avocado juice fanatic
+				a(href="avocad.ppcg.lol")
+					blockquote
+						p hello i have quetions how does juice an avocado i have try for thirtee minut and no juic
+						small user46049, avocado juice fanatic
+						
 			h1 The AvocadOS Manifesto
 			p AvocadOS is great and does all the things.
 				ol
