--- a/index.jade
+++ b/index.jade
@@ -7,7 +7,7 @@ html
 		|<style>#logo {height: auto;width: 400px;}</style>
 	body
 		.container-fluid.text-center.jumbotron
-			img#logo(src="avocadOS.svg")
+			img#logo(src="avocadOS.png")
 			p A Revolutionary Operating System Running jQuery
 			a.btn.btn-default(href="https://github.com/jQueryOS")
 				h4
