--- a/index.jade
+++ b/index.jade
@@ -4,7 +4,7 @@ html
 		title AvocadOS
 		link(rel="stylesheet" href="https://bootswatch.com/sandstone/bootstrap.min.css")
 		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css")
-		|<style>#logo{height:auto;width:400px}</style>
+		|<style>#logo{height:auto;width:400px}blockquote footer:before, blockquote small:before, blockquote .small:before{margin-left: 2em}</style>
 	body
 		.container-fluid.text-center.jumbotron
 			img#logo(src="avocadOS.png")
